refactor(接口测试): 支持跨项目场景可以走当前项目环境执行
Signed-off-by: fit2-zhao <yong.zhao@fit2cloud.com>